conexão com o banco de dados e arrumando o readme

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,3 +1,8 @@
+<!-- 
+  Esse é o único arquivo HTML do seu app React. O React insere o app aqui dentro da <div id="root">.
+  Você não mexe muito nele, mas pode colocar fontes, ícones, meta tags etc.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
