caminhando para deixar mais bonito

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="ReadFlow: Sistema de recomendação de livros baseado em IA." />
-    <link rel="apple-touch-icon" href="icon.PNG" />
+    <link rel="apple-touch-icon" href="../src/assets/icon.PNG" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ReadFlow</title>
   </head>
