fazendo o css do header e do footer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="icon.PNG" />
+    <!-- Atualizando o caminho do ícone -->
+    <link rel="icon" href="%PUBLIC_URL%/src/assets/icon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#251a0b" /> <!-- Cor do tema -->
     <meta name="description" content="ReadFlow: Sistema de recomendação de livros baseado em IA." />
-    <link rel="apple-touch-icon" href="../src/assets/icon.PNG" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/src/assets/icon.png" /> <!-- Caminho correto do ícone -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> <!-- Caminho do manifesto -->
     <title>ReadFlow</title>
   </head>
   <body>
